update all files

--- a/acidclean.html
+++ b/acidclean.html
@@ -4,39 +4,77 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- === SEO Basics === -->
-  <title data-i18n-key="meta_title">ยาล้างไขมัน 105 (Cleaner 105) | Baume Chemical</title>
-  <meta name="description" content="Cleaner 105 น้ำยาล้างคราบไขมันและสนิมบนผิวโลหะ เหมาะกับการล้างแบบแช่โดยไม่ต้องใช้ความร้อน ไม่ทำลายผิวโลหะ กลิ่นต่ำ ใช้ร่วมกับกรดเกลือ/กรดกำมะถันเพื่อเพิ่มประสิทธิภาพการล้างได้">
-  <meta name="robots" content="index,follow,max-image-preview:large">
-  <!-- ใส่ canonical ให้เป็น URL จริงของหน้านี้เมื่อพร้อมใช้งาน -->
-  <!-- <link rel="canonical" href="https://www.baumechemical.com/home/pretreatment/cleaner105"> -->
-  <meta name="theme-color" content="#2c5e4e">
+<!-- === SEO: Title, Description, Canonical, OG/Twitter === -->
+<title data-i18n-key="meta_title">Cleaner 105 — ยาล้างไขมันสำหรับงานโลหะ | Baume Chemical</title>
+<meta name="description" content="Cleaner 105 น้ำยาล้างคราบไขมันและสนิมสำหรับงานโลหะ ใช้แบบแช่โดยไม่ต้องอุ่น ปกป้องผิว กลิ่นต่ำ และผสมร่วมกับกรดเกลือ/กรดกำมะถันเพื่อเพิ่มประสิทธิภาพการล้าง">
+<link rel="canonical" href="https://www.baumechemical.com/cleaner-105.html">
+<meta name="robots" content="index,follow,max-image-preview:large">
+<meta name="theme-color" content="#2c5e4e">
 
-  <!-- Open Graph / Twitter -->
-  <meta property="og:type" content="product">
-  <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:locale" content="th_TH">
-  <meta property="og:locale:alternate" content="en_US">
-  <meta property="og:title" content="ยาล้างไขมัน 105 (Cleaner 105) | Baume Chemical">
-  <meta property="og:description" content="น้ำยาล้างคราบไขมันและสนิมบนผิวโลหะ ใช้แช่ได้โดยไม่ต้องอุ่น ใช้ร่วมกับกรดเพื่อเพิ่มประสิทธิภาพการล้าง">
-  <meta property="og:image" content="https://i.imgur.com/MLtal0F.jpeg">
-  <meta property="og:image:alt" content="Cleaner 105 — น้ำยาล้างคราบไขมันและสนิมบนผิวโลหะ">
-  <meta name="twitter:card" content="summary_large_image">
+<meta property="og:type" content="product">
+<meta property="og:site_name" content="Baume Chemical">
+<meta property="og:locale" content="th_TH">
+<meta property="og:title" content="Cleaner 105 — ยาล้างไขมันสำหรับงานโลหะ | Baume Chemical">
+<meta property="og:description" content="น้ำยาล้างคราบไขมัน/สนิม ใช้แช่ไม่ต้องอุ่น ปกป้องผิว กลิ่นต่ำ ผสมกรดเพื่อเพิ่มประสิทธิภาพ">
+<meta property="og:url" content="https://www.baumechemical.com/cleaner-105.html">
+<meta property="og:image" content="https://i.imgur.com/MLtal0F.jpeg">
+<meta property="og:image:alt" content="Cleaner 105 — น้ำยาล้างคราบไขมันและสนิมบนผิวโลหะ">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Cleaner 105 — ยาล้างไขมันสำหรับงานโลหะ | Baume Chemical">
+<meta name="twitter:description" content="น้ำยาล้างคราบไขมัน/สนิม ใช้แช่ไม่ต้องอุ่น ปกป้องผิว กลิ่นต่ำ">
 
-  <!-- Structured Data -->
-  <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"Product",
-    "name":"Cleaner 105",
-    "description":"น้ำยาล้างคราบไขมันและสนิมบนผิวโลหะสำหรับกระบวนการเตรียมผิวก่อนชุบ (Pretreatment)",
-    "brand":{"@type":"Brand","name":"Baume Chemical"},
-    "category":"Pretreatment Degreaser",
-    "inLanguage":"th",
-    "image":"https://i.imgur.com/MLtal0F.jpeg",
-    "url":""
-  }
-  </script>
+<!-- === JSON-LD: Organization + WebPage(isPartOf CollectionPage) + Product + Breadcrumb === -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
+    {
+      "@type": "Organization",
+      "@id": "https://www.baumechemical.com/#org",
+      "name": "Baume Chemical",
+      "url": "https://www.baumechemical.com/",
+      "logo": "https://img2.pic.in.th/pic/Baume.jpg",
+      "sameAs": ["https://line.me/ti/p/~baumechemical"]
+    },
+    {
+      "@type": "WebPage",
+      "@id": "https://www.baumechemical.com/cleaner-105.html#webpage",
+      "url": "https://www.baumechemical.com/cleaner-105.html",
+      "name": "Cleaner 105 — ยาล้างไขมันสำหรับงานโลหะ | Baume Chemical",
+      "inLanguage": "th",
+      "publisher": { "@id": "https://www.baumechemical.com/#org" },
+      "primaryImageOfPage": "https://i.imgur.com/MLtal0F.jpeg",
+      "isPartOf": {
+        "@type": "CollectionPage",
+        "@id": "https://www.baumechemical.com/pretreatment.html#collection",
+        "name": "Pretreatment | Baume Chemical",
+        "url": "https://www.baumechemical.com/pretreatment.html",
+        "inLanguage": "th"
+      }
+    },
+    {
+      "@type": "Product",
+      "@id": "https://www.baumechemical.com/cleaner-105.html#product",
+      "name": "Cleaner 105",
+      "description": "น้ำยาล้างคราบไขมันและสนิมบนผิวโลหะสำหรับกระบวนการเตรียมผิวก่อนชุบ (Pretreatment)",
+      "brand": { "@type": "Brand", "name": "Baume Chemical" },
+      "category": "Pretreatment Degreaser",
+      "image": "https://i.imgur.com/MLtal0F.jpeg",
+      "url": "https://www.baumechemical.com/cleaner-105.html"
+    },
+    {
+      "@type": "BreadcrumbList",
+      "@id": "https://www.baumechemical.com/cleaner-105.html#breadcrumb",
+      "itemListElement": [
+        { "@type": "ListItem", "position": 1, "name": "หน้าแรก", "item": "https://www.baumechemical.com/" },
+        { "@type": "ListItem", "position": 2, "name": "Pretreatment", "item": "https://www.baumechemical.com/pretreatment.html" },
+        { "@type": "ListItem", "position": 3, "name": "Cleaner 105", "item": "https://www.baumechemical.com/cleaner-105.html" }
+      ]
+    }
+  ]
+}
+</script>
+
 
   <!-- Fonts & Perf -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
