--- a/aluminum-electropolishing-solution.html
+++ b/aluminum-electropolishing-solution.html
@@ -4,18 +4,77 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title data-i18n-key="meta_title">EP 8539 — น้ำยากัดเงาอลูมิเนียม (Electropolishing) | Baume Chemical</title>
-  <meta name="description" content="EP 8539 ช่วยให้ผิวอลูมิเนียมเรียบเนียน เงา ลบคม ไม่มีควัน NOx ทำงาน 65–80 °C, 12–24 V, 20–80 A/dm², 2–16 นาที ใช้สารละลาย 100% พร้อมขั้นตอน การดูแล บำรุงรักษา และข้อกำหนดอุปกรณ์">
-  <meta name="robots" content="index,follow,max-image-preview:large">
-  <meta name="theme-color" content="#2c5e4e">
+<!-- === SEO: Title, Description, Canonical, OG/Twitter === -->
+<title data-i18n-key="meta_title">EP 8539 — น้ำยากัดเงาอลูมิเนียม (Electropolishing) | Baume Chemical</title>
+<meta name="description" content="EP 8539 ช่วยให้ผิวอลูมิเนียมเรียบเงา ลบคม ไม่เกิดควัน NOx ช่วงทำงาน 65–80 °C, 12–24 V, 20–80 A/dm² ภายใน 2–16 นาที พร้อมแนวทางดูแลบ่อและข้อกำหนดอุปกรณ์">
+<link rel="canonical" href="https://www.baumechemical.com/ep-8539.html">
+<meta name="robots" content="index,follow,max-image-preview:large">
+<meta name="theme-color" content="#2c5e4e">
 
-  <!-- Open Graph -->
-  <meta property="og:type" content="product">
-  <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:title" content="EP 8539 — Aluminum Electropolishing">
-  <meta property="og:description" content="Mirror gloss & deburring for aluminum. NOx-fume-free. 65–80 °C • 12–24 V • 20–80 A/dm² • 2–16 min.">
-  <meta property="og:image" content="https://i.imgur.com/HTuaHH8.jpeg">
-  <meta name="twitter:card" content="summary_large_image">
+<meta property="og:type" content="product">
+<meta property="og:site_name" content="Baume Chemical">
+<meta property="og:locale" content="th_TH">
+<meta property="og:locale:alternate" content="en_US">
+<meta property="og:title" content="EP 8539 — น้ำยากัดเงาอลูมิเนียม (Electropolishing)">
+<meta property="og:description" content="ผิวเงาแบบกระจก ลบคมไว ไม่มีควัน NOx • 65–80 °C • 12–24 V • 20–80 A/dm² • 2–16 นาที">
+<meta property="og:url" content="https://www.baumechemical.com/ep-8539.html">
+<meta property="og:image" content="https://i.imgur.com/HTuaHH8.jpeg">
+<meta property="og:image:alt" content="EP 8539 — น้ำยากัดเงาอลูมิเนียม">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="EP 8539 — น้ำยากัดเงาอลูมิเนียม (Electropolishing)">
+<meta name="twitter:description" content="Mirror gloss, fast deburring, NOx-fume-free. 65–80 °C • 12–24 V • 20–80 A/dm² • 2–16 min.">
+
+<!-- === JSON-LD: Organization + WebPage(isPartOf CollectionPage) + Product + Breadcrumb === -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
+    {
+      "@type": "Organization",
+      "@id": "https://www.baumechemical.com/#org",
+      "name": "Baume Chemical",
+      "url": "https://www.baumechemical.com/",
+      "logo": "https://img2.pic.in.th/pic/Baume.jpg",
+      "sameAs": ["https://line.me/ti/p/~baumechemical"]
+    },
+    {
+      "@type": "WebPage",
+      "@id": "https://www.baumechemical.com/ep-8539.html#webpage",
+      "url": "https://www.baumechemical.com/ep-8539.html",
+      "name": "EP 8539 — น้ำยากัดเงาอลูมิเนียม (Electropolishing) | Baume Chemical",
+      "inLanguage": "th",
+      "primaryImageOfPage": "https://i.imgur.com/HTuaHH8.jpeg",
+      "publisher": { "@id": "https://www.baumechemical.com/#org" },
+      "isPartOf": {
+        "@type": "CollectionPage",
+        "@id": "https://www.baumechemical.com/polishing.html#collection",
+        "name": "Polishing | Baume Chemical",
+        "url": "https://www.baumechemical.com/polishing.html",
+        "inLanguage": "th"
+      }
+    },
+    {
+      "@type": "Product",
+      "@id": "https://www.baumechemical.com/ep-8539.html#product",
+      "name": "EP 8539",
+      "description": "น้ำยากัดเงาอลูมิเนียม (Electropolishing) ให้ผิวเงา ลบคม ไม่มีควัน NOx ช่วงทำงานกว้าง",
+      "category": "Aluminum Electropolishing Chemistry",
+      "brand": { "@type": "Brand", "name": "Baume Chemical" },
+      "image": "https://i.imgur.com/HTuaHH8.jpeg",
+      "url": "https://www.baumechemical.com/ep-8539.html"
+    },
+    {
+      "@type": "BreadcrumbList",
+      "@id": "https://www.baumechemical.com/ep-8539.html#breadcrumb",
+      "itemListElement": [
+        { "@type": "ListItem", "position": 1, "name": "หน้าแรก", "item": "https://www.baumechemical.com/" },
+        { "@type": "ListItem", "position": 2, "name": "Polishing", "item": "https://www.baumechemical.com/polishing.html" },
+        { "@type": "ListItem", "position": 3, "name": "EP 8539", "item": "https://www.baumechemical.com/ep-8539.html" }
+      ]
+    }
+  ]
+}
+</script>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
