--- a/anti-tarnish-bu-186.html
+++ b/anti-tarnish-bu-186.html
@@ -4,18 +4,80 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <title data-i18n-key="meta_title">BU-816 Anti-Tarnish • น้ำยากันหมอง 186 | Baume Chemical</title>
-  <meta name="description" content="น้ำยากันหมอง BU-816 สำหรับชุบซิงค์ นิเกิลเงา/ซาติน ทอง เงิน โครเมียม และสแตนเลส ไล่น้ำ แห้งไว เคลือบปกป้อง ฟิล์มยืดหยุ่น ไม่มีสารตะกั่ว ใช้ 50–120 mL/L จุ่ม 10 s–2 min ~75–80 °C">
-  <meta name="robots" content="index,follow,max-image-preview:large">
-  <meta name="theme-color" content="#2c5e4e">
+<!-- === SEO Basics === -->
+<title data-i18n-key="meta_title">BU-816 Anti-Tarnish • น้ำยากันหมอง 186 | Baume Chemical</title>
+<meta name="description" content="น้ำยากันหมอง BU-816 สำหรับชุบซิงค์ นิเกิลเงา/ซาติน ทอง เงิน โครเมียม และสแตนเลส ไล่น้ำ แห้งไว ฟิล์มใสยืดหยุ่น ปลอดตะกั่ว ใช้ 50–120 mL/L จุ่ม 10 s–2 min ที่ ~75–80 °C">
+<link rel="canonical" href="https://www.baumechemical.com/bu-816.html">
+<meta name="robots" content="index,follow,max-image-preview:large">
+<meta name="theme-color" content="#2c5e4e">
 
-  <!-- Open Graph -->
-  <meta property="og:type" content="product">
-  <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:title" content="BU-816 Anti-Tarnish • Final Protective Rinse">
-  <meta property="og:description" content="Water-break remover and anti-tarnish film for Zn, Ni (bright/satin), Au, Ag, Cr, and stainless. 50–120 mL/L, 10 s–2 min at ~75–80 °C. Lead-free, flexible film.">
-  <meta property="og:image" content="https://i.imgur.com/GpAzo8t.jpeg">
-  <meta name="twitter:card" content="summary_large_image">
+<!-- Open Graph / Twitter -->
+<meta property="og:type" content="product">
+<meta property="og:site_name" content="Baume Chemical">
+<meta property="og:locale" content="th_TH">
+<meta property="og:locale:alternate" content="en_US">
+<meta property="og:title" content="BU-816 Anti-Tarnish • Final Protective Rinse">
+<meta property="og:description" content="Water-break remover & anti-tarnish for Zn/Ni/Au/Ag/Cr & stainless. 50–120 mL/L • 10 s–2 min • ~75–80 °C. Lead-free, flexible film.">
+<meta property="og:url" content="https://www.baumechemical.com/bu-816.html">
+<meta property="og:image" content="https://i.imgur.com/GpAzo8t.jpeg">
+<meta property="og:image:alt" content="BU-816 Anti-Tarnish — Baume Chemical">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="BU-816 Anti-Tarnish • น้ำยากันหมอง 186">
+<meta name="twitter:description" content="ไล่น้ำ แห้งไว ฟิล์มใสยืดหยุ่น ปกป้องงานชุบ Zn/Ni/Au/Ag/Cr & สแตนเลส. 50–120 mL/L • 10 s–2 min • ~75–80 °C.">
+
+<!-- === JSON-LD: Organization + CollectionPage + WebPage + Product + Breadcrumb === -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
+    {
+      "@type": "Organization",
+      "@id": "https://www.baumechemical.com/#org",
+      "name": "Baume Chemical",
+      "url": "https://www.baumechemical.com/",
+      "logo": "https://img2.pic.in.th/pic/Baume.jpg",
+      "sameAs": ["https://line.me/ti/p/~baumechemical"]
+    },
+    {
+      "@type": "CollectionPage",
+      "@id": "https://www.baumechemical.com/protective.html#collection",
+      "url": "https://www.baumechemical.com/protective.html",
+      "name": "Protective Treatment | Baume Chemical",
+      "inLanguage": "th",
+      "publisher": { "@id": "https://www.baumechemical.com/#org" }
+    },
+    {
+      "@type": "WebPage",
+      "@id": "https://www.baumechemical.com/bu-816.html#webpage",
+      "url": "https://www.baumechemical.com/bu-816.html",
+      "name": "BU-816 Anti-Tarnish • น้ำยากันหมอง 186 | Baume Chemical",
+      "inLanguage": "th",
+      "primaryImageOfPage": "https://i.imgur.com/GpAzo8t.jpeg",
+      "isPartOf": { "@id": "https://www.baumechemical.com/protective.html#collection" },
+      "publisher": { "@id": "https://www.baumechemical.com/#org" }
+    },
+    {
+      "@type": "Product",
+      "@id": "https://www.baumechemical.com/bu-816.html#product",
+      "name": "BU-816 Anti-Tarnish (No.186)",
+      "description": "น้ำยากันหมองขั้นตอนสุดท้าย ช่วยไล่น้ำ แห้งไว สร้างฟิล์มใสยืดหยุ่น สำหรับ Zn/Ni/Au/Ag/Cr และสแตนเลส ปลอดสารตะกั่ว",
+      "category": "Protective Treatment / Anti-Tarnish",
+      "brand": { "@type": "Brand", "name": "Baume Chemical" },
+      "image": ["https://i.imgur.com/GpAzo8t.jpeg"],
+      "url": "https://www.baumechemical.com/bu-816.html"
+    },
+    {
+      "@type": "BreadcrumbList",
+      "@id": "https://www.baumechemical.com/bu-816.html#breadcrumb",
+      "itemListElement": [
+        { "@type": "ListItem", "position": 1, "name": "หน้าแรก", "item": "https://www.baumechemical.com/" },
+        { "@type": "ListItem", "position": 2, "name": "Protective Treatment", "item": "https://www.baumechemical.com/protective.html" },
+        { "@type": "ListItem", "position": 3, "name": "BU-816 Anti-Tarnish", "item": "https://www.baumechemical.com/bu-816.html" }
+      ]
+    }
+  ]
+}
+</script>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
