--- a/antitarnish-for-copper.html
+++ b/antitarnish-for-copper.html
@@ -4,18 +4,81 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <title data-i18n-key="meta_title">Anti-tarnish for Copper • น้ำยากันหมองสำหรับทองแดง/ทองเหลือง | Baume Chemical</title>
-  <meta name="description" content="น้ำยากันหมองสำหรับงานทองแดง/ทองเหลือง ใช้เป็นน้ำล้างสุดท้าย ไล่น้ำ แห้งไว ฟิล์มใสปกป้อง ทน Humidity Test ~200 ชม. ผสมน้ำ 2–5% จุ่ม 5–15 วินาที 20–50 °C ไม่มีโครม 6">
-  <meta name="robots" content="index,follow,max-image-preview:large">
-  <meta name="theme-color" content="#2c5e4e">
+<!-- === SEO Basics === -->
+<title data-i18n-key="meta_title">Anti-tarnish for Copper • น้ำยากันหมองสำหรับทองแดง/ทองเหลือง | Baume Chemical</title>
+<meta name="description" content="น้ำยากันหมองทองแดง/ทองเหลือง ใช้เป็นน้ำล้างสุดท้าย ไล่น้ำ แห้งไว ฟิล์มใสปกป้อง ทนความชื้น ~200 ชม. ผสมน้ำ 2–5% จุ่ม 5–15 วินาที ที่ 20–50 °C ปราศจากโครเมียม 6">
+<link rel="canonical" href="https://www.baumechemical.com/anti-tarnish-copper.html">
+<meta name="robots" content="index,follow,max-image-preview:large">
+<meta name="theme-color" content="#2c5e4e">
 
-  <!-- Open Graph -->
-  <meta property="og:type" content="product">
-  <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:title" content="Anti-tarnish for Copper • Final Rinse for Cu/Brass">
-  <meta property="og:description" content="Final anti-tarnish rinse for copper/brass. Fast-dry, clear protective film, ~200 h humidity resistance. 2–5% v/v, 5–15 s at 20–50 °C. Chromium-free (no Cr6+).">
-  <meta property="og:image" content="https://i.imgur.com/5krsJEX.jpeg">
-  <meta name="twitter:card" content="summary_large_image">
+<!-- Open Graph / Twitter -->
+<meta property="og:type" content="product">
+<meta property="og:site_name" content="Baume Chemical">
+<meta property="og:locale" content="th_TH">
+<meta property="og:locale:alternate" content="en_US">
+<meta property="og:title" content="Anti-tarnish for Copper • Final Rinse for Cu/Brass">
+<meta property="og:description" content="Final anti-tarnish rinse for copper/brass. Fast-dry clear film, ~200 h humidity resistance. 2–5% v/v • 5–15 s • 20–50 °C. Chromium-free.">
+<meta property="og:url" content="https://www.baumechemical.com/anti-tarnish-copper.html">
+<meta property="og:image" content="https://i.imgur.com/5krsJEX.jpeg">
+<meta property="og:image:alt" content="Anti-tarnish for Copper — น้ำยากันหมองสำหรับทองแดง/ทองเหลือง">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Anti-tarnish for Copper • น้ำยากันหมองทองแดง/ทองเหลือง">
+<meta name="twitter:description" content="ล้างขั้นสุดท้าย ไล่น้ำ แห้งไว ฟิล์มใสปกป้อง ทนความชื้น ~200 ชม. 2–5% v/v • 5–15 s • 20–50 °C • ปราศจากโครเมียม 6">
+
+<!-- === JSON-LD: Organization + CollectionPage + WebPage + Product + Breadcrumb === -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
+    {
+      "@type": "Organization",
+      "@id": "https://www.baumechemical.com/#org",
+      "name": "Baume Chemical",
+      "url": "https://www.baumechemical.com/",
+      "logo": "https://img2.pic.in.th/pic/Baume.jpg",
+      "sameAs": ["https://line.me/ti/p/~baumechemical"]
+    },
+    {
+      "@type": "CollectionPage",
+      "@id": "https://www.baumechemical.com/protective.html#collection",
+      "url": "https://www.baumechemical.com/protective.html",
+      "name": "Protective Treatment | Baume Chemical",
+      "inLanguage": "th",
+      "publisher": { "@id": "https://www.baumechemical.com/#org" }
+    },
+    {
+      "@type": "WebPage",
+      "@id": "https://www.baumechemical.com/anti-tarnish-copper.html#webpage",
+      "url": "https://www.baumechemical.com/anti-tarnish-copper.html",
+      "name": "Anti-tarnish for Copper • น้ำยากันหมองสำหรับทองแดง/ทองเหลือง | Baume Chemical",
+      "inLanguage": "th",
+      "primaryImageOfPage": "https://i.imgur.com/5krsJEX.jpeg",
+      "isPartOf": { "@id": "https://www.baumechemical.com/protective.html#collection" },
+      "publisher": { "@id": "https://www.baumechemical.com/#org" }
+    },
+    {
+      "@type": "Product",
+      "@id": "https://www.baumechemical.com/anti-tarnish-copper.html#product",
+      "name": "Anti-tarnish for Copper (Final Rinse)",
+      "description": "น้ำยากันหมองสำหรับทองแดง/ทองเหลือง ใช้เป็นน้ำล้างสุดท้าย ไล่น้ำ แห้งไว สร้างฟิล์มใสปกป้อง ทนความชื้น ~200 ชม. 2–5% v/v • 5–15 s • 20–50 °C • Chromium-free",
+      "category": "Protective Treatment / Anti-Tarnish",
+      "brand": { "@type": "Brand", "name": "Baume Chemical" },
+      "image": ["https://i.imgur.com/5krsJEX.jpeg"],
+      "url": "https://www.baumechemical.com/anti-tarnish-copper.html",
+      "inLanguage": "th"
+    },
+    {
+      "@type": "BreadcrumbList",
+      "@id": "https://www.baumechemical.com/anti-tarnish-copper.html#breadcrumb",
+      "itemListElement": [
+        { "@type": "ListItem", "position": 1, "name": "หน้าแรก", "item": "https://www.baumechemical.com/" },
+        { "@type": "ListItem", "position": 2, "name": "Protective Treatment", "item": "https://www.baumechemical.com/protective.html" },
+        { "@type": "ListItem", "position": 3, "name": "Anti-tarnish for Copper", "item": "https://www.baumechemical.com/anti-tarnish-copper.html" }
+      ]
+    }
+  ]
+}
+</script>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
