--- a/anti-tarnish-bu-20.html
+++ b/anti-tarnish-bu-20.html
@@ -4,18 +4,81 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <title data-i18n-key="meta_title">BU-20 Anti-Tarnish (Electrolytic) • น้ำยากันหมองไฟฟ้า | Baume Chemical</title>
-  <meta name="description" content="น้ำยากันหมองไฟฟ้า BU-20 สำหรับชิ้นงานเงิน ทอง นิกเกิล ทองแดง และโลหะผสมทองแดง ไล่น้ำ แห้งไว สร้างฟิล์มใสยืดหยุ่น ป้องกันหมอง ช่วงทำงาน: 80–120 mL/L, 20–35 °C, 30–120 s, 0.1–0.5 A/dm² (แอโนดสแตนเลส)">
-  <meta name="robots" content="index,follow,max-image-preview:large">
-  <meta name="theme-color" content="#2c5e4e">
+<!-- === SEO Basics === -->
+<title data-i18n-key="meta_title">BU-20 Anti-Tarnish (Electrolytic) • น้ำยากันหมองไฟฟ้า | Baume Chemical</title>
+<meta name="description" content="น้ำยากันหมองไฟฟ้า BU-20 สำหรับชิ้นงานเงิน ทอง นิกเกิล ทองแดง และโลหะผสมทองแดง ไล่น้ำ แห้งไว สร้างฟิล์มใสยืดหยุ่น ป้องกันหมอง ช่วงทำงาน: 80–120 mL/L, 20–35 °C, 30–120 s, 0.1–0.5 A/dm² (แอโนดสแตนเลส)">
+<link rel="canonical" href="https://www.baumechemical.com/bu-20.html">
+<meta name="robots" content="index,follow,max-image-preview:large">
+<meta name="theme-color" content="#2c5e4e">
 
-  <!-- Open Graph -->
-  <meta property="og:type" content="product">
-  <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:title" content="BU-20 Anti-Tarnish (Electrolytic)">
-  <meta property="og:description" content="Final electrolytic anti-tarnish for Ag/Au/Ni/Cu. 80–120 mL/L, 20–35 °C, 30–120 s, 0.1–0.5 A/dm². Stainless anode.">
-  <meta property="og:image" content="https://i.imgur.com/lh9CVn9.jpeg">
-  <meta name="twitter:card" content="summary_large_image">
+<!-- Open Graph / Twitter -->
+<meta property="og:type" content="product">
+<meta property="og:site_name" content="Baume Chemical">
+<meta property="og:locale" content="th_TH">
+<meta property="og:locale:alternate" content="en_US">
+<meta property="og:title" content="BU-20 Anti-Tarnish (Electrolytic) • น้ำยากันหมองไฟฟ้า">
+<meta property="og:description" content="Final electrolytic anti-tarnish for Ag/Au/Ni/Cu. 80–120 mL/L • 20–35 °C • 30–120 s • 0.1–0.5 A/dm².">
+<meta property="og:url" content="https://www.baumechemical.com/bu-20.html">
+<meta property="og:image" content="https://i.imgur.com/lh9CVn9.jpeg">
+<meta property="og:image:alt" content="BU-20 Electrolytic Anti-Tarnish — Baume Chemical">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="BU-20 Anti-Tarnish (Electrolytic) • น้ำยากันหมองไฟฟ้า">
+<meta name="twitter:description" content="Mirror-clean, fast-dry protective film. 80–120 mL/L • 20–35 °C • 30–120 s • 0.1–0.5 A/dm².">
+
+<!-- === JSON-LD: Organization + CollectionPage + WebPage + Product + Breadcrumb === -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
+    {
+      "@type": "Organization",
+      "@id": "https://www.baumechemical.com/#org",
+      "name": "Baume Chemical",
+      "url": "https://www.baumechemical.com/",
+      "logo": "https://img2.pic.in.th/pic/Baume.jpg",
+      "sameAs": ["https://line.me/ti/p/~baumechemical"]
+    },
+    {
+      "@type": "CollectionPage",
+      "@id": "https://www.baumechemical.com/protective.html#collection",
+      "url": "https://www.baumechemical.com/protective.html",
+      "name": "Protective Treatment | Baume Chemical",
+      "inLanguage": "th",
+      "publisher": { "@id": "https://www.baumechemical.com/#org" }
+    },
+    {
+      "@type": "WebPage",
+      "@id": "https://www.baumechemical.com/bu-20.html#webpage",
+      "url": "https://www.baumechemical.com/bu-20.html",
+      "name": "BU-20 Anti-Tarnish (Electrolytic) • น้ำยากันหมองไฟฟ้า | Baume Chemical",
+      "inLanguage": "th",
+      "primaryImageOfPage": "https://i.imgur.com/lh9CVn9.jpeg",
+      "isPartOf": { "@id": "https://www.baumechemical.com/protective.html#collection" },
+      "publisher": { "@id": "https://www.baumechemical.com/#org" }
+    },
+    {
+      "@type": "Product",
+      "@id": "https://www.baumechemical.com/bu-20.html#product",
+      "name": "BU-20 Anti-Tarnish (Electrolytic)",
+      "description": "น้ำยากันหมองไฟฟ้าขั้นตอนสุดท้าย สำหรับ Ag/Au/Ni/Cu และโลหะผสมทองแดง ไล่น้ำ แห้งไว สร้างฟิล์มใสยืดหยุ่น ป้องกันหมอง",
+      "category": "Anti-Tarnish (Electrolytic)",
+      "brand": { "@type": "Brand", "name": "Baume Chemical" },
+      "image": ["https://i.imgur.com/lh9CVn9.jpeg"],
+      "url": "https://www.baumechemical.com/bu-20.html"
+    },
+    {
+      "@type": "BreadcrumbList",
+      "@id": "https://www.baumechemical.com/bu-20.html#breadcrumb",
+      "itemListElement": [
+        { "@type": "ListItem", "position": 1, "name": "หน้าแรก", "item": "https://www.baumechemical.com/" },
+        { "@type": "ListItem", "position": 2, "name": "Protective Treatment", "item": "https://www.baumechemical.com/protective.html" },
+        { "@type": "ListItem", "position": 3, "name": "BU-20 Anti-Tarnish (Electrolytic)", "item": "https://www.baumechemical.com/bu-20.html" }
+      ]
+    }
+  ]
+}
+</script>
+
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
