--- a/contact-us.html
+++ b/contact-us.html
@@ -488,7 +488,7 @@
     const I18N = {
       th: {
         /* Meta */
-        meta_title: "ติดต่อเรา (อีเมลช่องเดียว) | Baume Chemical",
+        meta_title: "ติดต่อเรา | Baume Chemical",
         meta_desc: "ติดต่อ Baume Chemical เพื่อให้ทีมงานติดต่อกลับผ่านอีเมล ช่องเดียว กรอกอีเมลแล้วส่งได้ทันที พร้อมข้อมูลติดต่ออื่นๆ และแผนที่บริษัท",
         og_title: "ติดต่อเรา | Baume Chemical",
         og_desc: "กรอกอีเมลเพื่อให้เราติดต่อกลับได้ทันที พร้อมดูเบอร์โทรและแผนที่บริษัท",
