update all files

--- a/passivation.html
+++ b/passivation.html
@@ -324,15 +324,15 @@
         <nav aria-label="หมวดหมู่ผลิตภัณฑ์">
           <h3 class="footer-title" data-i18n-key="footer_products">หมวดผลิตภัณฑ์</h3>
           <ul class="footer-list">
-            <li><a href="pretreatment.html">Pretreatment</a></li>
-            <li><a href="platingcoating.html">Plating</a></li>
-            <li><a href="blackening.html">Blackening</a></li>
-            <li><a href="passivation.html">Passivation</a></li>
-            <li><a href="polishing.html">Polishing</a></li>
-            <li><a href="strippers.html">Strippers</a></li>
-            <li><a href="protective.html">Protective Treatment</a></li>
-            <li><a href="service.html">Customer service</a></li>
-            <li><a href="equipment.html">Equipment</a></li>
+            <li><a href="products/pretreatment.html">Pretreatment</a></li>
+            <li><a href="products/platingcoating.html">Plating</a></li>
+            <li><a href="products/blackening.html">Blackening</a></li>
+            <li><a href="products/passivation.html">Passivation</a></li>
+            <li><a href="products/polishing.html">Polishing</a></li>
+            <li><a href="products/strippers.html">Strippers</a></li>
+            <li><a href="products/protective.html">Protective Treatment</a></li>
+            <li><a href="products/service.html">Customer service</a></li>
+            <li><a href="products/equipment.html">Equipment</a></li>
           </ul>
         </nav>
 
