--- a/products.html
+++ b/products.html
@@ -81,15 +81,15 @@
     "itemListOrder":"http://schema.org/ItemListOrderAscending",
     "numberOfItems": 9,
     "itemListElement": [
-      {"@type":"ListItem","position":1,"name":"Pretreatment","url":"https://www.baumechemical.com/pretreatment.html"},
-      {"@type":"ListItem","position":2,"name":"Plating","url":"https://www.baumechemical.com/platingcoating.html"},
-      {"@type":"ListItem","position":3,"name":"Blackening","url":"https://www.baumechemical.com/blackening.html"},
-      {"@type":"ListItem","position":4,"name":"Passivation","url":"https://www.baumechemical.com/passivation.html"},
-      {"@type":"ListItem","position":5,"name":"Polishing","url":"https://www.baumechemical.com/polishing.html"},
-      {"@type":"ListItem","position":6,"name":"Strippers","url":"https://www.baumechemical.com/strippers.html"},
-      {"@type":"ListItem","position":7,"name":"Protective Treatment","url":"https://www.baumechemical.com/protective.html"},
-      {"@type":"ListItem","position":8,"name":"Customer service","url":"https://www.baumechemical.com/service.html"},
-      {"@type":"ListItem","position":9,"name":"Equipment","url":"https://www.baumechemical.com/equipment.html"}
+      {"@type":"ListItem","position":1,"name":"Pretreatment","url":"https://www.baumechemical.com/products/pretreatment.html"},
+      {"@type":"ListItem","position":2,"name":"Plating","url":"https://www.baumechemical.com/products/platingcoating.html"},
+      {"@type":"ListItem","position":3,"name":"Blackening","url":"https://www.baumechemical.com/products/blackening.html"},
+      {"@type":"ListItem","position":4,"name":"Passivation","url":"https://www.baumechemical.com/products/passivation.html"},
+      {"@type":"ListItem","position":5,"name":"Polishing","url":"https://www.baumechemical.com/products/polishing.html"},
+      {"@type":"ListItem","position":6,"name":"Strippers","url":"https://www.baumechemical.com/products/strippers.html"},
+      {"@type":"ListItem","position":7,"name":"Protective Treatment","url":"https://www.baumechemical.com/products/protective.html"},
+      {"@type":"ListItem","position":8,"name":"Customer service","url":"https://www.baumechemical.com/products/service.html"},
+      {"@type":"ListItem","position":9,"name":"Equipment","url":"https://www.baumechemical.com/products/equipment.html"}
     ]
   }
   </script>
@@ -382,15 +382,15 @@
         <nav aria-label="หมวดหมู่ผลิตภัณฑ์">
           <h3 class="footer-title" data-i18n-key="footer_products">หมวดผลิตภัณฑ์</h3>
           <ul class="footer-list">
-            <li><a href="pretreatment.html">Pretreatment</a></li>
-            <li><a href="platingcoating.html">Plating</a></li>
-            <li><a href="blackening.html">Blackening</a></li>
-            <li><a href="passivation.html">Passivation</a></li>
-            <li><a href="polishing.html">Polishing</a></li>
-            <li><a href="strippers.html">Strippers</a></li>
-            <li><a href="protective.html">Protective Treatment</a></li>
-            <li><a href="service.html">Customer service</a></li>
-            <li><a href="equipment.html">Equipment</a></li>
+            <li><a href="products/pretreatment.html">Pretreatment</a></li>
+            <li><a href="products/platingcoating.html">Plating</a></li>
+            <li><a href="products/blackening.html">Blackening</a></li>
+            <li><a href="products/passivation.html">Passivation</a></li>
+            <li><a href="products/polishing.html">Polishing</a></li>
+            <li><a href="products/strippers.html">Strippers</a></li>
+            <li><a href="products/protective.html">Protective Treatment</a></li>
+            <li><a href="products/service.html">Customer service</a></li>
+            <li><a href="products/equipment.html">Equipment</a></li>
           </ul>
         </nav>
         <section aria-label="ติดต่อเรา">
