--- a/acidclean.html
+++ b/acidclean.html
@@ -7,7 +7,7 @@
 <!-- === SEO: Title, Description, Canonical, OG/Twitter === -->
 <title data-i18n-key="meta_title">Cleaner 105 — ยาล้างไขมันสำหรับงานโลหะ | Baume Chemical</title>
 <meta name="description" content="Cleaner 105 น้ำยาล้างคราบไขมันและสนิมสำหรับงานโลหะ ใช้แบบแช่โดยไม่ต้องอุ่น ปกป้องผิว กลิ่นต่ำ และผสมร่วมกับกรดเกลือ/กรดกำมะถันเพื่อเพิ่มประสิทธิภาพการล้าง">
-<link rel="canonical" href="https://www.baumechemical.com/cleaner-105.html">
+<link rel="canonical" href="https://www.baumechemical.com/products/pretreatment/acidclean.html">
 <meta name="robots" content="index,follow,max-image-preview:large">
 <meta name="theme-color" content="#2c5e4e">
 
@@ -16,7 +16,7 @@
 <meta property="og:locale" content="th_TH">
 <meta property="og:title" content="Cleaner 105 — ยาล้างไขมันสำหรับงานโลหะ | Baume Chemical">
 <meta property="og:description" content="น้ำยาล้างคราบไขมัน/สนิม ใช้แช่ไม่ต้องอุ่น ปกป้องผิว กลิ่นต่ำ ผสมกรดเพื่อเพิ่มประสิทธิภาพ">
-<meta property="og:url" content="https://www.baumechemical.com/cleaner-105.html">
+<meta property="og:url" content="https://www.baumechemical.com/products/pretreatment/acidclean.html">
 <meta property="og:image" content="https://i.imgur.com/MLtal0F.jpeg">
 <meta property="og:image:alt" content="Cleaner 105 — น้ำยาล้างคราบไขมันและสนิมบนผิวโลหะ">
 <meta name="twitter:card" content="summary_large_image">
@@ -38,37 +38,37 @@
     },
     {
       "@type": "WebPage",
-      "@id": "https://www.baumechemical.com/cleaner-105.html#webpage",
-      "url": "https://www.baumechemical.com/cleaner-105.html",
+      "@id": "https://www.baumechemical.com/products/pretreatment/acidclean.html#webpage",
+      "url": "https://www.baumechemical.com/products/pretreatment/acidclean.html",
       "name": "Cleaner 105 — ยาล้างไขมันสำหรับงานโลหะ | Baume Chemical",
       "inLanguage": "th",
       "publisher": { "@id": "https://www.baumechemical.com/#org" },
       "primaryImageOfPage": "https://i.imgur.com/MLtal0F.jpeg",
       "isPartOf": {
         "@type": "CollectionPage",
-        "@id": "https://www.baumechemical.com/pretreatment.html#collection",
+        "@id": "https://www.baumechemical.com/products/pretreatment.html#collection",
         "name": "Pretreatment | Baume Chemical",
-        "url": "https://www.baumechemical.com/pretreatment.html",
+        "url": "https://www.baumechemical.com/products/pretreatment.html",
         "inLanguage": "th"
       }
     },
     {
       "@type": "Product",
-      "@id": "https://www.baumechemical.com/cleaner-105.html#product",
+      "@id": "https://www.baumechemical.com/products/pretreatment/acidclean.html#product",
       "name": "Cleaner 105",
       "description": "น้ำยาล้างคราบไขมันและสนิมบนผิวโลหะสำหรับกระบวนการเตรียมผิวก่อนชุบ (Pretreatment)",
       "brand": { "@type": "Brand", "name": "Baume Chemical" },
       "category": "Pretreatment Degreaser",
       "image": "https://i.imgur.com/MLtal0F.jpeg",
-      "url": "https://www.baumechemical.com/cleaner-105.html"
+      "url": "https://www.baumechemical.com/products/pretreatment/acidclean.html"
     },
     {
       "@type": "BreadcrumbList",
-      "@id": "https://www.baumechemical.com/cleaner-105.html#breadcrumb",
+      "@id": "https://www.baumechemical.com/products/pretreatment/acidclean.html#breadcrumb",
       "itemListElement": [
         { "@type": "ListItem", "position": 1, "name": "หน้าแรก", "item": "https://www.baumechemical.com/" },
-        { "@type": "ListItem", "position": 2, "name": "Pretreatment", "item": "https://www.baumechemical.com/pretreatment.html" },
-        { "@type": "ListItem", "position": 3, "name": "Cleaner 105", "item": "https://www.baumechemical.com/cleaner-105.html" }
+        { "@type": "ListItem", "position": 2, "name": "Pretreatment", "item": "https://www.baumechemical.com/products/pretreatment.html" },
+        { "@type": "ListItem", "position": 3, "name": "Cleaner 105", "item": "https://www.baumechemical.com/products/pretreatment/acidclean.html" }
       ]
     }
   ]
