--- a/pretreatment.html
+++ b/pretreatment.html
@@ -8,7 +8,7 @@
   <title data-i18n-key="meta_title">กรด/ด่างล้างไขมัน • อัลตร้าโซนิค | Baume Chemical</title>
   <meta name="description" content="น้ำยาทำความสะอาดก่อนชุบ: กรดล้างไขมัน ด่างล้างไขมัน และอัลตร้าโซนิค เลือกสูตรให้เหมาะกับวัสดุ/คราบ เพื่อให้ผิวพร้อมชุบ คุณภาพคงที่ ลดของเสีย พร้อมทีมเทคนิคดูแลงานหน้างานจริง">
   <meta name="robots" content="index,follow,max-image-preview:large">
-  <link rel="canonical" href="Pretreatment.html">
+  <link rel="canonical" href="products/pretreatment.html">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter -->
@@ -18,7 +18,7 @@
   <meta property="og:locale:alternate" content="en_US">
   <meta property="og:title" content="กรด/ด่างล้างไขมัน • อัลตร้าโซนิค | Baume Chemical">
   <meta property="og:description" content="กรด/ด่างล้างไขมัน และอัลตร้าโซนิคสำหรับ Pretreatment ก่อนชุบ ทีมเทคนิคช่วยเลือกสูตรให้เหมาะกับไลน์ของคุณ">
-  <meta property="og:url" content="https://www.baumechemical.com/pretreatment">
+  <meta property="og:url" content="https://www.baumechemical.com/products/pretreatment.html">
   <meta property="og:image" content="https://i.imgur.com/QfsLZ0I.jpeg">
   <meta property="og:image:alt" content="Pretreatment cleaning: acid, alkaline and ultrasonic">
   <meta name="twitter:card" content="summary_large_image">
@@ -190,7 +190,7 @@
             <div class="badges"><span class="badge">Acid Cleaner</span><span class="badge">Pretreatment</span></div>
             <h3 data-i18n-key="acid_title">กรดล้างไขมัน (Acid Degreaser)</h3>
             <p data-i18n-key="acid_desc">น้ำยาเคมีสำหรับล้างคราบไขมัน พร้อมทั้งกัดสนิม บนชิ้นงานโลหะทั่วไป เหมาะกับงานที่ต้องจุ่มแช่ล้างนานๆ โดยไม่ต้องใช้อุณหภูมิมาช่วย ใช้ล้างบนอลูมิเนียม เหล็ก ทองแดง ทองเหลืองและโลหะต่างๆ</p>
-            <a class="more" href="acidclean.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="products/pretreatment/acidclean.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -203,7 +203,7 @@
             <div class="badges"><span class="badge">Alkaline Cleaner</span><span class="badge">Pretreatment</span></div>
             <h3 data-i18n-key="alk_title">ผงด่างล้างไขมัน (Alkaline Degreaser)</h3>
             <p data-i18n-key="alk_desc">จัดการคราบน้ำมัน แว๊กซ์ และจาระบีจากการกลึง/ปั๊ม ให้ผิวสะอาดโดยไม่ทำลายเนื้อโลหะ มีคุณสมบัติล้างคราบน้ำมันและสนิมแดงๆ รวมไปถึงรอยสะเก็ด รอยถลอกจากผิวงานอย่างมีประสิทธิภาพ มีทั้งแบบต้มและใช้ไฟฟ้า</p>
-            <a class="more" href="Soakclean.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="products/pretreatment/soakclean.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -216,7 +216,7 @@
             <div class="badges"><span class="badge">Ultrasonic Cleaner</span><span class="badge">Pretreatment</span></div>
             <h3 data-i18n-key="ultra_title">ทำความสะอาดอัลตร้าโซนิค (Ultrasonic)</h3>
             <p data-i18n-key="ultra_desc">สามารถใช้ได้ดีกับระบบล้างอุลตร้าโซนิค ระบบเขย่าขัดและกลิ้งล้าง บนเหล็ก ซิงค์ฉีด และขี้ตะกั่ว ใช้กับงานล้างโลหะ สแตนเลส เหล็ก อลูมิเนียม ซิ้งค์ฉีด งานกัลวาไนซ์ ทองแดง ทองเหลือง แมกนีเซียมและขี้ตะกั่ว</p>
-            <a class="more" href="Ultrasonic.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="products/pretreatment/ultrasonic.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
       </div>
