--- a/products/index.html
+++ b/products/index.html
@@ -383,7 +383,7 @@
           <div class="badges"><span class="badge">Pretreatment</span><span class="badge">Cleaning</span></div>
           <h3 data-i18n-key="card_pret_title">เคมีล้างผิวงาน</h3>
           <p data-i18n-key="card_pret_desc">ยาล้างไขมันแบบกรด/ด่าง และอัลตร้าโซนิคช่วยกำจัดคราบน้ำมัน/สนิม เตรียมผิวพร้อมชุบ ลดของเสียในไลน์</p>
-          <a class="more" href="products/pretreatment/index.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
+          <a class="more" href="pretreatment/index.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
         </div>
       </article>
       <!-- Plating -->
@@ -574,7 +574,7 @@
         <nav aria-label="หมวดหมู่ผลิตภัณฑ์">
           <h3 class="footer-title" data-i18n-key="footer_products">หมวดผลิตภัณฑ์</h3>
           <ul class="footer-list">
-            <li><a href="products/pretreatment/index.html">Pretreatment</a></li>
+            <li><a href="pretreatment/index.html">Pretreatment</a></li>
             <li><a href="products/platingcoating.html">Plating</a></li>
             <li><a href="products/blackening.html">Blackening</a></li>
             <li><a href="products/passivation.html">Passivation</a></li>
