upload all files

--- a/products/pretreatment/index.html
+++ b/products/pretreatment/index.html
@@ -52,8 +52,8 @@
     "@type":"BreadcrumbList",
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
-      {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products"},
-      "@type":"ListItem","position":3,"name":"Pretreatment Cleaners","item":"https://www.baumechemical.com/pretreatment"
+      {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},
+      "@type":"ListItem","position":3,"name":"Pretreatment Cleaners","item":"https://www.baumechemical.com/products/pretreatment.html"
     ]
   }
   </script>
@@ -190,7 +190,7 @@
             <div class="badges"><span class="badge">Acid Cleaner</span><span class="badge">Pretreatment</span></div>
             <h3 data-i18n-key="acid_title">กรดล้างไขมัน (Acid Degreaser)</h3>
             <p data-i18n-key="acid_desc">น้ำยาเคมีสำหรับล้างคราบไขมัน พร้อมทั้งกัดสนิม บนชิ้นงานโลหะทั่วไป เหมาะกับงานที่ต้องจุ่มแช่ล้างนานๆ โดยไม่ต้องใช้อุณหภูมิมาช่วย ใช้ล้างบนอลูมิเนียม เหล็ก ทองแดง ทองเหลืองและโลหะต่างๆ</p>
-            <a class="more" href="products/pretreatment/acidclean.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="acidclean.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -203,7 +203,7 @@
             <div class="badges"><span class="badge">Alkaline Cleaner</span><span class="badge">Pretreatment</span></div>
             <h3 data-i18n-key="alk_title">ผงด่างล้างไขมัน (Alkaline Degreaser)</h3>
             <p data-i18n-key="alk_desc">จัดการคราบน้ำมัน แว๊กซ์ และจาระบีจากการกลึง/ปั๊ม ให้ผิวสะอาดโดยไม่ทำลายเนื้อโลหะ มีคุณสมบัติล้างคราบน้ำมันและสนิมแดงๆ รวมไปถึงรอยสะเก็ด รอยถลอกจากผิวงานอย่างมีประสิทธิภาพ มีทั้งแบบต้มและใช้ไฟฟ้า</p>
-            <a class="more" href="products/pretreatment/soakclean.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="soakclean.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -216,7 +216,7 @@
             <div class="badges"><span class="badge">Ultrasonic Cleaner</span><span class="badge">Pretreatment</span></div>
             <h3 data-i18n-key="ultra_title">ทำความสะอาดอัลตร้าโซนิค (Ultrasonic)</h3>
             <p data-i18n-key="ultra_desc">สามารถใช้ได้ดีกับระบบล้างอุลตร้าโซนิค ระบบเขย่าขัดและกลิ้งล้าง บนเหล็ก ซิงค์ฉีด และขี้ตะกั่ว ใช้กับงานล้างโลหะ สแตนเลส เหล็ก อลูมิเนียม ซิ้งค์ฉีด งานกัลวาไนซ์ ทองแดง ทองเหลือง แมกนีเซียมและขี้ตะกั่ว</p>
-            <a class="more" href="products/pretreatment/ultrasonic.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="ultrasonic.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
       </div>
@@ -286,7 +286,7 @@
         <nav aria-label="หมวดหมู่ผลิตภัณฑ์">
           <h3 class="footer-title" data-i18n-key="footer_products">หมวดผลิตภัณฑ์</h3>
           <ul class="footer-list">
-            <li><a href="products/pretreatment.html">Pretreatment</a></li>
+            <li><a href="index.html">Pretreatment</a></li>
             <li><a href="products/platingcoating.html">Plating</a></li>
             <li><a href="products/blackening.html">Blackening</a></li>
             <li><a href="products/passivation.html">Passivation</a></li>
