--- a/soakclean.html
+++ b/soakclean.html
@@ -8,7 +8,7 @@
   <title data-i18n-key="meta_title">สารล้างไขมัน B1 / E60 (แบบแช่ & แบบไฟฟ้า) | Baume Chemical</title>
   <meta name="description" content="รวม 2 โซลูชันล้างไขมันก่อนชุบ: Soak Cleaner B1 (แช่/ต้ม/ถังกลิ้ง/อัลตร้าโซนิค) และ Degreaser E60 (ล้างไขมันด้วยไฟฟ้า). เลือกใช้ให้เหมาะกับวัสดุและไลน์งานของคุณ พร้อมคำแนะนำจากทีมเทคนิค.">
   <meta name="robots" content="index,follow,max-image-preview:large">
-  <!-- <link rel="canonical" href="https://www.baumechemical.com/home/pretreatment/degreaser-b1-e60"> -->
+  <!-- <link rel="canonical" href="https://www.baumechemical.com/products/pretreatment/soakclean.html"> -->
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter -->
@@ -30,7 +30,7 @@
       "@type":"BreadcrumbList",
       "itemListElement":[
         {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
-        {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products"},
+        {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products/"},
         {"@type":"ListItem","position":3,"name":"Degreaser B1 / E60","item":""}
       ]
     },
@@ -306,7 +306,7 @@
         <nav aria-label="หมวดหมู่ผลิตภัณฑ์">
           <h3 class="footer-title" data-i18n-key="footer_products">หมวดผลิตภัณฑ์</h3>
           <ul class="footer-list">
-            <li><a href="products/pretreatment.html">Pretreatment</a></li>
+            <li><a href="index.html">Pretreatment</a></li>
             <li><a href="products/platingcoating.html">Plating</a></li>
             <li><a href="products/blackening.html">Blackening</a></li>
             <li><a href="products/passivation.html">Passivation</a></li>
