upload all files

--- a/products/pretreatment/ultrasonic.html
+++ b/products/pretreatment/ultrasonic.html
@@ -230,8 +230,8 @@
         <nav aria-label="หมวดหมู่ผลิตภัณฑ์">
           <h3 class="footer-title" data-i18n-key="footer_products">หมวดผลิตภัณฑ์</h3>
           <ul class="footer-list">
-            <li><a href="products/pretreatment.html">Pretreatment</a></li>
-            <li><a href="products/platingcoating.html">Plating</a></li>
+            <li><a href="./index.html">Pretreatment</a></li>
+            <li><a href="">Plating</a></li>
             <li><a href="products/blackening.html">Blackening</a></li>
             <li><a href="products/passivation.html">Passivation</a></li>
             <li><a href="products/polishing.html">Polishing</a></li>
