--- a/products/index.html
+++ b/products/index.html
@@ -575,7 +575,7 @@
           <h3 class="footer-title" data-i18n-key="footer_products">หมวดผลิตภัณฑ์</h3>
           <ul class="footer-list">
             <li><a href="pretreatment/index.html">Pretreatment</a></li>
-            <li><a href="products/platingcoating.html">Plating</a></li>
+            <li><a href="platingcoating/index.html">Plating</a></li>
             <li><a href="products/blackening.html">Blackening</a></li>
             <li><a href="products/passivation.html">Passivation</a></li>
             <li><a href="products/polishing.html">Polishing</a></li>
