upload all files

--- a/products/index.html
+++ b/products/index.html
@@ -574,15 +574,15 @@
         <nav aria-label="หมวดหมู่ผลิตภัณฑ์">
           <h3 class="footer-title" data-i18n-key="footer_products">หมวดผลิตภัณฑ์</h3>
           <ul class="footer-list">
-            <li><a href="pretreatment/index.html">Pretreatment</a></li>
-            <li><a href="platingcoating/index.html">Plating</a></li>
-            <li><a href="products/blackening.html">Blackening</a></li>
-            <li><a href="products/passivation.html">Passivation</a></li>
-            <li><a href="products/polishing.html">Polishing</a></li>
-            <li><a href="products/strippers.html">Strippers</a></li>
-            <li><a href="products/protective.html">Protective Treatment</a></li>
-            <li><a href="products/service.html">Customer service</a></li>
-            <li><a href="products/equipment.html">Equipment</a></li>
+            <li><a href="https://www.baumechemical.com/products/pretreatment/">Pretreatment</a></li>
+            <li><a href="https://www.baumechemical.com/products/platingcoating/">Plating</a></li>
+            <li><a href="https://www.baumechemical.com/products/blackening/">Blackening</a></li>
+            <li><a href="https://www.baumechemical.com/products/passivation/">Passivation</a></li>
+            <li><a href="https://www.baumechemical.com/products/polishing/">Polishing</a></li>
+            <li><a href="https://www.baumechemical.com/products/strippers/">Strippers</a></li>
+            <li><a href="https://www.baumechemical.com/products/protective/">Protective Treatment</a></li>
+            <li><a href="https://www.baumechemical.com/products/service/">Customer service</a></li>
+            <li><a href="https://www.baumechemical.com/products/equipment/">Equipment</a></li>
           </ul>
         </nav>
 
